--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
-    "typescript": "^2.8.3",
-    "winston": "^2.4.2"
+    "find-my-way": "^1.15.1",
+    "reflect-metadata": "^0.1.12",
+    "typescript": "^2.9.2",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^10.0.8",
@@ -37,7 +39,7 @@
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "jest": "^22.4.3",
-    "node-sass": "4.7.2",
+    "node-sass": "^4.9.2",
     "nodemon": "^1.17.4",
     "shelljs": "^0.8.2",
     "supertest": "^3.0.0",
