--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "outDir": "dist",
     "baseUrl": ".",
     "experimentalDecorators": true,
-    "types": ["node"],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ],
     "paths": {
       "*": [
         "node_modules/*",
